hsqlt/src/misc/grammar/HSQLParser.ts
// Generated from grammar/HSQL.g4 by ANTLR 4.9.0-SNAPSHOT


// for the join clause type
import {SelectJoinType} from '../ast/SelectHelpers';
import {SingularDataType} from '../ast/SingularDataType';


import { ATN } from "antlr4ts/atn/ATN";
import { ATNDeserializer } from "antlr4ts/atn/ATNDeserializer";
import { FailedPredicateException } from "antlr4ts/FailedPredicateException";
import { NotNull } from "antlr4ts/Decorators";
import { NoViableAltException } from "antlr4ts/NoViableAltException";
import { Override } from "antlr4ts/Decorators";
import { Parser } from "antlr4ts/Parser";
import { ParserRuleContext } from "antlr4ts/ParserRuleContext";
import { ParserATNSimulator } from "antlr4ts/atn/ParserATNSimulator";
import { ParseTreeListener } from "antlr4ts/tree/ParseTreeListener";
import { ParseTreeVisitor } from "antlr4ts/tree/ParseTreeVisitor";
import { RecognitionException } from "antlr4ts/RecognitionException";
import { RuleContext } from "antlr4ts/RuleContext";
//import { RuleVersion } from "antlr4ts/RuleVersion";
import { TerminalNode } from "antlr4ts/tree/TerminalNode";
import { Token } from "antlr4ts/Token";
import { TokenStream } from "antlr4ts/TokenStream";
import { Vocabulary } from "antlr4ts/Vocabulary";
import { VocabularyImpl } from "antlr4ts/VocabularyImpl";

import * as Utils from "antlr4ts/misc/Utils";

import { HSQLVisitor } from "./HSQLVisitor";


export class HSQLParser extends Parser {
	public static readonly T__0 = 1;
	public static readonly REAL_TYPE = 2;
	public static readonly INTEGER_TYPE = 3;
	public static readonly DECIMAL_TYPE = 4;
	public static readonly VARSTRING_TYPE = 5;
	public static readonly STRING_TYPE = 6;
	public static readonly BOOLEAN = 7;
	public static readonly UNSTABLE = 8;
	public static readonly STABLE = 9;
	public static readonly TABLE = 10;
	public static readonly ALTER = 11;
	public static readonly TO = 12;
	public static readonly ADD = 13;
	public static readonly DROP = 14;
	public static readonly MODIFY = 15;
	public static readonly EXPORT = 16;
	public static readonly SHARED = 17;
	public static readonly ASC = 18;
	public static readonly DESC = 19;
	public static readonly ORDER = 20;
	public static readonly DISTRIBUTE = 21;
	public static readonly GROUP = 22;
	public static readonly BY = 23;
	public static readonly TRAIN = 24;
	public static readonly PREDICT = 25;
	public static readonly PLOT = 26;
	public static readonly OUTPUT = 27;
	public static readonly OPTION = 28;
	public static readonly OPTIONS = 29;
	public static readonly OVERWRITE = 30;
	public static readonly UPDATE = 31;
	public static readonly ON = 32;
	public static readonly INDEPENDENT = 33;
	public static readonly IDCOLUMN = 34;
	public static readonly PROJECT = 35;
	public static readonly SELECT = 36;
	public static readonly DECLARE = 37;
	public static readonly FROM = 38;
	public static readonly TOP = 39;
	public static readonly WHERE = 40;
	public static readonly HAVING = 41;
	public static readonly DISTINCT = 42;
	public static readonly NATURAL = 43;
	public static readonly CROSS = 44;
	public static readonly JOIN = 45;
	public static readonly INNER = 46;
	public static readonly LEFT = 47;
	public static readonly RIGHT = 48;
	public static readonly FULL = 49;
	public static readonly OUTER = 50;
	public static readonly ONLY = 51;
	public static readonly CASE = 52;
	public static readonly TRUE = 53;
	public static readonly FALSE = 54;
	public static readonly IMPORT = 55;
	public static readonly AS = 56;
	public static readonly CREATE = 57;
	public static readonly LAYOUT = 58;
	public static readonly FILE = 59;
	public static readonly MAP = 60;
	public static readonly METHOD = 61;
	public static readonly DEPENDENT = 62;
	public static readonly TITLE = 63;
	public static readonly EXPIRE = 64;
	public static readonly LIMIT = 65;
	public static readonly OFFSET = 66;
	public static readonly MODULE = 67;
	public static readonly UESCAPE = 68;
	public static readonly TYPE = 69;
	public static readonly SEMICOLON = 70;
	public static readonly EQ = 71;
	public static readonly NEQ = 72;
	public static readonly LT = 73;
	public static readonly LTE = 74;
	public static readonly GT = 75;
	public static readonly GTE = 76;
	public static readonly PLUS = 77;
	public static readonly SUBSTRACT = 78;
	public static readonly MULTIPLY = 79;
	public static readonly DIVIDE = 80;
	public static readonly MODULO = 81;
	public static readonly XOR = 82;
	public static readonly AND = 83;
	public static readonly OR = 84;
	public static readonly NOT = 85;
	public static readonly IN = 86;
	public static readonly BETWEEN = 87;
	public static readonly EXISTS = 88;
	public static readonly STRING = 89;
	public static readonly UNICODE_STRING = 90;
	public static readonly BINARY_LITERAL = 91;
	public static readonly INTEGER_VALUE = 92;
	public static readonly DECIMAL_VALUE = 93;
	public static readonly DOUBLE_VALUE = 94;
	public static readonly IDENTIFIER = 95;
	public static readonly COMMA_ = 96;
	public static readonly BSTART_ = 97;
	public static readonly BEND_ = 98;
	public static readonly CURLY_BSTART_ = 99;
	public static readonly CURLY_BEND_ = 100;
	public static readonly ECL_SNIPPETS = 101;
	public static readonly SIMPLE_COMMENT = 102;
	public static readonly SIMPLE_C_COMMENT = 103;
	public static readonly BRACKETED_COMMENT = 104;
	public static readonly WS = 105;
	public static readonly RULE_program = 0;
	public static readonly RULE_completestmt = 1;
	public static readonly RULE_stmt = 2;
	public static readonly RULE_definitionStmt = 3;
	public static readonly RULE_expr = 4;
	public static readonly RULE_actionStmt = 5;
	public static readonly RULE_selectStmt = 6;
	public static readonly RULE_distributeByClause = 7;
	public static readonly RULE_distinctClause = 8;
	public static readonly RULE_selectGroupByClause = 9;
	public static readonly RULE_idSet = 10;
	public static readonly RULE_selectColumns = 11;
	public static readonly RULE_selectCol = 12;
	public static readonly RULE_col = 13;
	public static readonly RULE_aliasingCol = 14;
	public static readonly RULE_selectFromClause = 15;
	public static readonly RULE_selectFromRef = 16;
	public static readonly RULE_selectAlias = 17;
	public static readonly RULE_joinOperator = 18;
	public static readonly RULE_selectWhereClause = 19;
	public static readonly RULE_joinConstraint = 20;
	public static readonly RULE_joinSpecification = 21;
	public static readonly RULE_groupByClause = 22;
	public static readonly RULE_orderByClause = 23;
	public static readonly RULE_sortItem = 24;
	public static readonly RULE_ascSortItem = 25;
	public static readonly RULE_descSortItem = 26;
	public static readonly RULE_limitOffsetClause = 27;
	public static readonly RULE_offsetClause = 28;
	public static readonly RULE_comparisonOperator = 29;
	public static readonly RULE_logicalOperator = 30;
	public static readonly RULE_literal = 31;
	public static readonly RULE_dataType = 32;
	public static readonly RULE_alterOperator = 33;
	public static readonly RULE_overDefinition = 34;
	public static readonly RULE_overDefinitionRoot = 35;
	public static readonly RULE_overDefinitionTail = 36;
	public static readonly RULE_definition = 37;
	public static readonly RULE_expression = 38;
	public static readonly RULE_booleanExpression = 39;
	public static readonly RULE_predicate = 40;
	public static readonly RULE_valueExpressionList = 41;
	public static readonly RULE_valueExpression = 42;
	public static readonly RULE_primaryExpression = 43;
	public static readonly RULE_number = 44;
	public static readonly RULE_string = 45;
	public static readonly RULE_booleanValue = 46;
	public static readonly RULE_importStmt = 47;
	public static readonly RULE_outputStmt = 48;
	public static readonly RULE_attribute = 49;
	public static readonly RULE_namedOutput = 50;
	public static readonly RULE_toFile = 51;
	public static readonly RULE_plotStmt = 52;
	public static readonly RULE_scope = 53;
	public static readonly RULE_declarations = 54;
	public static readonly RULE_declaration = 55;
	public static readonly RULE_colDefs = 56;
	public static readonly RULE_colDef = 57;
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"program", "completestmt", "stmt", "definitionStmt", "expr", "actionStmt", 
		"selectStmt", "distributeByClause", "distinctClause", "selectGroupByClause", 
		"idSet", "selectColumns", "selectCol", "col", "aliasingCol", "selectFromClause", 
		"selectFromRef", "selectAlias", "joinOperator", "selectWhereClause", "joinConstraint", 
		"joinSpecification", "groupByClause", "orderByClause", "sortItem", "ascSortItem", 
		"descSortItem", "limitOffsetClause", "offsetClause", "comparisonOperator", 
		"logicalOperator", "literal", "dataType", "alterOperator", "overDefinition", 
		"overDefinitionRoot", "overDefinitionTail", "definition", "expression", 
		"booleanExpression", "predicate", "valueExpressionList", "valueExpression", 
		"primaryExpression", "number", "string", "booleanValue", "importStmt", 
		"outputStmt", "attribute", "namedOutput", "toFile", "plotStmt", "scope", 
		"declarations", "declaration", "colDefs", "colDef",
	];

	private static readonly _LITERAL_NAMES: Array<string | undefined> = [
		undefined, "'.'", undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, "'='", undefined, "'<'", "'<='", "'>'", "'>='", "'+'", "'-'", 
		"'*'", "'/'", "'%'", "'^'", undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, "','", "'('", "')'", "'{'", "'}'",
	];
	private static readonly _SYMBOLIC_NAMES: Array<string | undefined> = [
		undefined, undefined, "REAL_TYPE", "INTEGER_TYPE", "DECIMAL_TYPE", "VARSTRING_TYPE", 
		"STRING_TYPE", "BOOLEAN", "UNSTABLE", "STABLE", "TABLE", "ALTER", "TO", 
		"ADD", "DROP", "MODIFY", "EXPORT", "SHARED", "ASC", "DESC", "ORDER", "DISTRIBUTE", 
		"GROUP", "BY", "TRAIN", "PREDICT", "PLOT", "OUTPUT", "OPTION", "OPTIONS", 
		"OVERWRITE", "UPDATE", "ON", "INDEPENDENT", "IDCOLUMN", "PROJECT", "SELECT", 
		"DECLARE", "FROM", "TOP", "WHERE", "HAVING", "DISTINCT", "NATURAL", "CROSS", 
		"JOIN", "INNER", "LEFT", "RIGHT", "FULL", "OUTER", "ONLY", "CASE", "TRUE", 
		"FALSE", "IMPORT", "AS", "CREATE", "LAYOUT", "FILE", "MAP", "METHOD", 
		"DEPENDENT", "TITLE", "EXPIRE", "LIMIT", "OFFSET", "MODULE", "UESCAPE", 
		"TYPE", "SEMICOLON", "EQ", "NEQ", "LT", "LTE", "GT", "GTE", "PLUS", "SUBSTRACT", 
		"MULTIPLY", "DIVIDE", "MODULO", "XOR", "AND", "OR", "NOT", "IN", "BETWEEN", 
		"EXISTS", "STRING", "UNICODE_STRING", "BINARY_LITERAL", "INTEGER_VALUE", 
		"DECIMAL_VALUE", "DOUBLE_VALUE", "IDENTIFIER", "COMMA_", "BSTART_", "BEND_", 
		"CURLY_BSTART_", "CURLY_BEND_", "ECL_SNIPPETS", "SIMPLE_COMMENT", "SIMPLE_C_COMMENT", 
		"BRACKETED_COMMENT", "WS",
	];
	public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(HSQLParser._LITERAL_NAMES, HSQLParser._SYMBOLIC_NAMES, []);

	// @Override
	// @NotNull
	public get vocabulary(): Vocabulary {
		return HSQLParser.VOCABULARY;
	}
	// tslint:enable:no-trailing-whitespace

	// @Override
	public get grammarFileName(): string { return "HSQL.g4"; }

	// @Override
	public get ruleNames(): string[] { return HSQLParser.ruleNames; }

	// @Override
	public get serializedATN(): string { return HSQLParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(HSQLParser._ATN, this);
	}
	// @RuleVersion(0)
	public program(): ProgramContext {
		let _localctx: ProgramContext = new ProgramContext(this._ctx, this.state);
		this.enterRule(_localctx, 0, HSQLParser.RULE_program);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 119;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << HSQLParser.EXPORT) | (1 << HSQLParser.SHARED) | (1 << HSQLParser.PLOT) | (1 << HSQLParser.OUTPUT))) !== 0) || ((((_la - 36)) & ~0x1F) === 0 && ((1 << (_la - 36)) & ((1 << (HSQLParser.SELECT - 36)) | (1 << (HSQLParser.TRUE - 36)) | (1 << (HSQLParser.FALSE - 36)) | (1 << (HSQLParser.IMPORT - 36)))) !== 0) || ((((_la - 89)) & ~0x1F) === 0 && ((1 << (_la - 89)) & ((1 << (HSQLParser.STRING - 89)) | (1 << (HSQLParser.UNICODE_STRING - 89)) | (1 << (HSQLParser.INTEGER_VALUE - 89)) | (1 << (HSQLParser.DECIMAL_VALUE - 89)) | (1 << (HSQLParser.DOUBLE_VALUE - 89)) | (1 << (HSQLParser.IDENTIFIER - 89)))) !== 0)) {
				{
				{
				this.state = 116;
				this.completestmt();
				}
				}
				this.state = 121;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 122;
			this.match(HSQLParser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public completestmt(): CompletestmtContext {
		let _localctx: CompletestmtContext = new CompletestmtContext(this._ctx, this.state);
		this.enterRule(_localctx, 2, HSQLParser.RULE_completestmt);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 124;
			this.stmt();
			this.state = 125;
			this.match(HSQLParser.SEMICOLON);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public stmt(): StmtContext {
		let _localctx: StmtContext = new StmtContext(this._ctx, this.state);
		this.enterRule(_localctx, 4, HSQLParser.RULE_stmt);
		try {
			this.state = 131;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case HSQLParser.EXPORT:
			case HSQLParser.SHARED:
			case HSQLParser.IDENTIFIER:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 127;
				this.definitionStmt();
				}
				break;
			case HSQLParser.PLOT:
			case HSQLParser.OUTPUT:
			case HSQLParser.SELECT:
			case HSQLParser.TRUE:
			case HSQLParser.FALSE:
			case HSQLParser.STRING:
			case HSQLParser.UNICODE_STRING:
			case HSQLParser.INTEGER_VALUE:
			case HSQLParser.DECIMAL_VALUE:
			case HSQLParser.DOUBLE_VALUE:
				this.enterOuterAlt(_localctx, 2);
				{
				(this.getInvokingContext(0) as ProgramContext).actionCount++;
				this.state = 129;
				this.actionStmt();
				}
				break;
			case HSQLParser.IMPORT:
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 130;
				this.importStmt();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public definitionStmt(): DefinitionStmtContext {
		let _localctx: DefinitionStmtContext = new DefinitionStmtContext(this._ctx, this.state);
		this.enterRule(_localctx, 6, HSQLParser.RULE_definitionStmt);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 133;
			this.scope();
			this.state = 134;
			_localctx._label = this.match(HSQLParser.IDENTIFIER);
			this.state = 135;
			this.match(HSQLParser.EQ);
			this.state = 136;
			this.expr();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public expr(): ExprContext {
		let _localctx: ExprContext = new ExprContext(this._ctx, this.state);
		this.enterRule(_localctx, 8, HSQLParser.RULE_expr);
		try {
			this.state = 140;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case HSQLParser.IDENTIFIER:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 138;
				this.definition();
				}
				break;
			case HSQLParser.PLOT:
			case HSQLParser.OUTPUT:
			case HSQLParser.SELECT:
			case HSQLParser.TRUE:
			case HSQLParser.FALSE:
			case HSQLParser.STRING:
			case HSQLParser.UNICODE_STRING:
			case HSQLParser.INTEGER_VALUE:
			case HSQLParser.DECIMAL_VALUE:
			case HSQLParser.DOUBLE_VALUE:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 139;
				this.actionStmt();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public actionStmt(): ActionStmtContext {
		let _localctx: ActionStmtContext = new ActionStmtContext(this._ctx, this.state);
		this.enterRule(_localctx, 10, HSQLParser.RULE_actionStmt);
		try {
			this.state = 146;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case HSQLParser.SELECT:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 142;
				this.selectStmt();
				}
				break;
			case HSQLParser.OUTPUT:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 143;
				this.outputStmt();
				}
				break;
			case HSQLParser.PLOT:
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 144;
				this.plotStmt();
				}
				break;
			case HSQLParser.TRUE:
			case HSQLParser.FALSE:
			case HSQLParser.STRING:
			case HSQLParser.UNICODE_STRING:
			case HSQLParser.INTEGER_VALUE:
			case HSQLParser.DECIMAL_VALUE:
			case HSQLParser.DOUBLE_VALUE:
				this.enterOuterAlt(_localctx, 4);
				{
				this.state = 145;
				this.literal();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public selectStmt(): SelectStmtContext {
		let _localctx: SelectStmtContext = new SelectStmtContext(this._ctx, this.state);
		this.enterRule(_localctx, 12, HSQLParser.RULE_selectStmt);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 148;
			this.match(HSQLParser.SELECT);
			this.state = 150;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === HSQLParser.DISTINCT) {
				{
				this.state = 149;
